...
      const Color(0xFFF6F7F8),

      appBar: AppBar(
        backgroundColor: Colors.white,

        title: Text(
          'Search: ${widget.keyword}',
        ),

        actions: [
          Stack(
            children: [
              IconButton(
...
                      : Icons.add,
                  size: 18,
                ),
                label: Text(
                  added
                      ? 'Add More'
                      : 'Add',
                ),
              ),
            ),
          );
        },
      ),
...
