...
      backgroundColor: const Color(0xFFF6F7F8),

      appBar: AppBar(
        backgroundColor: Colors.white,

        title: const Text(
          'Shopping List',
          style: TextStyle(
            fontWeight: FontWeight.bold,
          ),
        ),

        actions: [
...
                                      ),
                                    ),
                                  ),

                                  IconButton(
                                    tooltip:
                                    'Increase',
                                    onPressed: () {
                                      updateCart(() => cart.increaseQuantity(product.itemCode));
                                    },
                                    icon: const Icon(
                                      Icons
                                          .add_circle_outline,
...
